2004-11-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/xpm.c: just some minor code cleanup.

2004-11-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.c
	* plug-ins/gfig/gfig-style.c: combined two "Stroke" labels into a
	single one.

2004-11-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/noisify.c: applied a (modified) patch that adds
	the possibility to correlate the noise with the signal. Adds the
	new PDB procedure "plug_in_scatter_rgb". Fixes bug #158700.

	* plug-ins/helpbrowser/dialog.c: set a reasonable default size.

2004-11-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/postscript.c (skip_ps) (ps_close): fixed use of
	fread(). Unfortunately this slowed down the plug-in again.
	Disabled the code that reads the pipe to the end. This brings it
	back to speed. Seems to work fine for me, let's see if this causes
	problems for anyone...

2004-11-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/selection-round.scm: moved into the
	<Image>/Select/Modify menu now that we can safely use placeholders
	from Script-Fu.

2004-11-19  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/lib.pl
	* tools/pdbgen/stddefs.pdb: added support for deprecated procedures
	without any replacement.

	* app/plug-in/plug-in-message.c (plug_in_handle_proc_run): added
	a special warning for procedures without replacement.

	* tools/pdbgen/pdb/drawable.pdb: deprecated drawable_set_image()
	without any replacement and made it a nop (which fails if the
	passed image is different from the drawable's image). It's not
	needed any longer since 2.0 and moreover dangerous to use.

	* app/pdb/drawable_cmds.c
	* libgimp/gimpdrawable_pdb.[ch]: regenerated.

	* app/core/gimpitem.c (gimp_item_set_image): replaced assertion
	for gimp_item_is_floating() by !gimp_item_is_attached(). The
	former warned when adding a layer with already added mask to the
	image (which is a perfectly valid operation).

2004-11-18  Sven Neumann  <sven@gimp.org>
