@@ -1,5 +1,9 @@
 2004-11-19  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimp.c: converted a g_warning() to g_printerr().
+
+2004-11-19  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/xpm.c: just some minor code cleanup.
 
 2004-11-19  Sven Neumann  <sven@gimp.org>
